--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "developerforce/force.com-toolkit-for-php",
+    "name": "messageagency/force.com-toolkit-for-php",
     "description": "A wrapper for the Force.com Web Services SOAP API",
     "license": "BSD-3-Clause",
     "autoload": {
@@ -11,5 +11,8 @@
         "branch-alias": {
             "dev-master": "1.0.x-dev"
         }
+    },
+    "require": {
+        "ext-soap": "^7.1"
     }
 }
