--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
 {
-    "name": "messageagency/force.com-toolkit-for-php",
-    "description": "A wrapper for the Force.com Web Services SOAP API",
-    "license": "BSD-3-Clause",
-    "autoload": {
-        "classmap": [
-           "soapclient"
-        ]
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.x-dev"
-        }
-    },
-    "require": {
-        "ext-soap": "^7.1"
+  "name": "messageagency/force.com-toolkit-for-php",
+  "description": "A wrapper for the Force.com Web Services SOAP API",
+  "license": "BSD-3-Clause",
+  "autoload": {
+    "psr-4": {
+      "DeveloperForce\\PhpToolkit\\": "src"
     }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.x"
+    }
+  },
+  "require": {
+    "ext-soap": "^7.1",
+    "ext-xml": "^7.1",
+    "ext-dom": "20031129"
+  }
 }
